--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -1,4 +1,21 @@
 spring.application.name=gs-vault-config
-spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
-spring.cloud.vault.scheme=http
+
+spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
+#spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.authentication=APPROLE
+spring.cloud.vault.app-role.role-id=36b0bed0-ede9-9839-2b04-679557bff323
+#spring.cloud.vault.app-role.secret-id=
+#spring.cloud.vault.token=
+spring.cloud.vault.fail-fast=true
 spring.cloud.vault.kv.enabled=true
+#spring.cloud.vault.kv.backend=secret
+#spring.cloud.vault.host=localhost
+#spring.cloud.vault.port=8200
+#spring.cloud.vault.scheme=http
+spring.cloud.vault.connection-timeout=5000
+spring.cloud.vault.read-timeout=15000
+#spring.cloud.vault.config=
+#spring.config.import=vault://
+#spring.cloud.vault.kv.profile-separator='/'
+#spring.cloud.vault.kv.profiles=cloud
+spring.profiles.active=cloud
