--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ spring.application.name=gs-vault-config
 spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
 #spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.authentication=APPROLE
-spring.cloud.vault.app-role.role-id=36b0bed0-ede9-9839-2b04-679557bff323
+spring.cloud.vault.app-role.role-id="36b0bed0-ede9-9839-2b04-679557bff323"
 #spring.cloud.vault.app-role.secret-id=
 #spring.cloud.vault.token=
 spring.cloud.vault.fail-fast=true
