--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -3,8 +3,8 @@ spring.application.name=gs-vault-config
 spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
 #spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.authentication=APPROLE
-spring.cloud.vault.app-role.role-id="36b0bed0-ede9-9839-2b04-679557bff323"
-#spring.cloud.vault.app-role.secret-id=
+spring.cloud.vault.app-role.role-id=efd5c2ba-a9c4-33d7-07c5-54e944c332c5
+spring.cloud.vault.app-role.secret-id=592feed9-633a-9349-d66c-69d909724e69
 #spring.cloud.vault.token=
 spring.cloud.vault.fail-fast=true
 spring.cloud.vault.kv.enabled=true
