--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -1,13 +1,14 @@
 spring.application.name=gs-vault-config
-
 spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
 #spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.authentication=APPROLE
 spring.cloud.vault.app-role.role-id=efd5c2ba-a9c4-33d7-07c5-54e944c332c5
-spring.cloud.vault.app-role.secret-id=592feed9-633a-9349-d66c-69d909724e69
+spring.cloud.vault.app-role.secret-id=afc3ba43-dc7c-b394-58ed-a194bdaec470
 #spring.cloud.vault.token=
-spring.cloud.vault.fail-fast=true
+#spring.cloud.vault.fail-fast=true
 spring.cloud.vault.kv.enabled=true
+spring.cloud.vault.kv.application-name=gs-vault-config
+#spring.cloud.vault.kv.application-name=gs-vault-config
 #spring.cloud.vault.kv.backend=secret
 #spring.cloud.vault.host=localhost
 #spring.cloud.vault.port=8200
