--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -7,7 +7,7 @@ spring.cloud.vault.app-role.secret-id=4465bd99-42fd-9b6b-0c0f-eec65ee0349d
 #spring.cloud.vault.token=
 #spring.cloud.vault.fail-fast=true
 spring.cloud.vault.kv.enabled=true
-spring.cloud.vault.kv.application-name=gs-vault-config
+#spring.cloud.vault.kv.application-name=gs-vault-config
 #spring.cloud.vault.kv.application-name=gs-vault-config
 #spring.cloud.vault.kv.backend=secret
 #spring.cloud.vault.host=localhost
