updated bootstrap.properties Nov 10

--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -3,13 +3,14 @@ spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
 #spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.authentication=APPROLE
 spring.cloud.vault.app-role.role-id=efd5c2ba-a9c4-33d7-07c5-54e944c332c5
-spring.cloud.vault.app-role.secret-id=4465bd99-42fd-9b6b-0c0f-eec65ee0349d
+spring.cloud.vault.app-role.secret-id=7452ff81-b5f0-209e-642c-4365804d134a
 #spring.cloud.vault.token=
 #spring.cloud.vault.fail-fast=true
 spring.cloud.vault.kv.enabled=true
-#spring.cloud.vault.kv.application-name=gs-vault-config
-#spring.cloud.vault.kv.application-name=gs-vault-config
-#spring.cloud.vault.kv.backend=secret
+spring.cloud.vault.kv.backend=secret
+spring.cloud.vault.kv.application-name=gs-vault-config
+spring.cloud.vault.kv.default-context=gs-vault-config
+spring.cloud.vault.generic.enabled=false
 #spring.cloud.vault.host=localhost
 #spring.cloud.vault.port=8200
 #spring.cloud.vault.scheme=http
@@ -19,4 +20,4 @@ spring.cloud.vault.read-timeout=15000
 #spring.config.import=vault://
 #spring.cloud.vault.kv.profile-separator='/'
 #spring.cloud.vault.kv.profiles=cloud
-spring.profiles.active=cloud
+#spring.profiles.active=cloud
