Updated for testing

--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 spring.application.name=gs-vault-config
-spring.cloud.vault.uri=${VAULT_ADDR}
+spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
 #spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.authentication=APPROLE
 spring.cloud.vault.app-role.role-id=efd5c2ba-a9c4-33d7-07c5-54e944c332c5
