--- a/complete/src/main/resources/bootstrap.properties
+++ b/complete/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ spring.cloud.vault.uri=http://vault-hbm-benchmark.ocp311-apps.ocp.mc1985.net
 #spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.authentication=APPROLE
 spring.cloud.vault.app-role.role-id=efd5c2ba-a9c4-33d7-07c5-54e944c332c5
-spring.cloud.vault.app-role.secret-id=${APP_SECRET_ID}
+spring.cloud.vault.app-role.secret-id=${APP_SECRET}
 #spring.cloud.vault.token=
 #spring.cloud.vault.fail-fast=true
 spring.cloud.vault.kv.enabled=true
